// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LightGroup should go into edit mode on click 1`] = `
<div
  className="lightGroup_36rlri"
>
  <div>
    <input
      defaultValue="Test Group"
    />
    <button
      onClick={[Function]}
    >
      OK
    </button>
  </div>
  <Connect(Light)
    id={65537}
    key="Decke"
  />
</div>
`;

exports[`LightGroup should render correctly 1`] = `
<div
  className="lightGroup_36rlri"
>
  <h3
    className="name_7bdam5"
    onClick={[Function]}
  >
    Test Group
  </h3>
  <Connect(Light)
    id={65537}
    key="Decke"
  />
</div>
`;
